# RecommenderSystem

./: .gitignore  README.md  main.py  note.txt  pyproject.toml  setup.py
api/: main.py
recommender/: abtest.py  candidate.py  data.py  ranker.py  rerank.py  system.py
recommender/ranker/: EXTENSION.md  baseranker.py  din.py  factorization_machine.py  multitask_ranker.py  trainer.py
recommender/retrieval/: EXTENDSION.md  base_retrieval.py  item_cf.py
scripts/: train_din.py  train_fm.py  train_multitask.py
tests/: test_abtest.py  test_item_cf.py  test_pipeline.py
