[project]
name = "recommendersystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.120.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
